dft (0.6.5-1) unstable; urgency=low

  * Add support for nanopi neo and cubieboard-3

 -- William Bonnet <wbonnet@theitmakers.com>  Sun, 11 Feb 2018 18:00:00 +0100

dft (0.6.4-1) unstable; urgency=low

  * Fix image name
  * initrd size is generated in bootscript

 -- William Bonnet <wbonnet@theitmakers.com>  Thu, 04 Feb 2018 21:00:00 +0100

dft (0.6.3-1) unstable; urgency=low

  * Add support for sha224 sha384 and sha512 hash
  * Add bootscript support
  * Fix several problem during image generation
  * Add firmware content copy to image

 -- William Bonnet <wbonnet@theitmakers.com>  Thu, 01 Feb 2018 21:00:00 +0100

dft (0.6.2-1) unstable; urgency=low

  * Add additional binaries list generation when creating initiramfs

 -- William Bonnet <wbonnet@theitmakers.com>  Sun, 28 Jan 2018 21:54:00 +0100

dft (0.6.1-1) unstable; urgency=low

  * Remove debug info from stacking script

 -- William Bonnet <wbonnet@theitmakers.com>  Sat, 27 Jan 2018 13:55:00 +0100

dft (0.6.0-2) unstable; urgency=low

  * Fix version number in CLI help

 -- William Bonnet <wbonnet@theitmakers.com>  Sat, 27 Jan 2018 13:09:00 +0100

dft (0.6.0-1) unstable; urgency=low

  * Build system is oved out of main dft package

 -- William Bonnet <wbonnet@theitmakers.com>  Mon, 23 Jan 2018 21:19:00 +0100

dft (0.5.16-1) unstable; urgency=low

  * Rename bind server role and improve configuration files generation

 -- William Bonnet <wbonnet@theitmakers.com>  Thu, 18 Jan 2018 08:36:00 +0100

dft (0.5.15-1) unstable; urgency=low

  * Add partition and fs type generation for partition containing squashfs

 -- William Bonnet <wbonnet@theitmakers.com>  Tue, 09 Jan 2018 19:47:00 +0100

dft (0.5.14-1) unstable; urgency=low

  * Seperate openjdk iand openjre installation (role dft-openjdk)
  * Cleanup downloaded .deb files after rootfs generation

 -- William Bonnet <wbonnet@theitmakers.com>  Tue, 09 Jan 2018 09:27:00 +0100

dft (0.5.13-1) unstable; urgency=low
